# scenario-vetting-criteria

./: .gitignore  404.html  CITATION.cff  DESCRIPTION  NAMESPACE  README.md  build_copy_extdata.py  docu_code.R  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs-latest.yml  docs-release.yml
R/: file_paths.R  loading.R  scenariovettingcriteria-package.R
R/.ipynb_checkpoints/: file_paths-checkpoint.R
code/R/: index.html
code/R/all/: index.html
code/R/load_criteria/: index.html
code/python/: index.html
code/python/all/: index.html
code/python/package/: index.html
criteria_meta/: index.html
criteria_thrsh/: index.html
criteria_types/: index.html
docs/: criteria_meta.md  criteria_thrsh.md  criteria_types.md  index.md  nav.md  operations.md  reference_data.md  reference_srcs.md  sources.md
docs/assets/css/: extra.css
docs/code/: python.md
docs/components/: index.md
docs/partials/: descriptions.md  metadata.md  reference_data.md  sources.md  summary.md  thresholds.md  types.md
docs/tutorials/: R.py  basic.md  python.py
inst/extdata/: criteria-metadata.yaml  criteria-thresholds.csv  criteria-types.yaml  operations.yaml  reference-data.csv  reference-sources.bib  sources.bib
inst/extdata/edition-2026-02-01/: sources.bib
inst/extdata/edition-2026-06-01/: sources.bib
inst/extdata/reference-data/: BP-extrapol25.csv  BP.csv  CEDS-2025-COVIDaveraged.csv  CEDS-2025-extrapol25.csv  CEDS-2025.csv  EDGAR-extrapol25.csv  EDGAR.csv  EI-2023-extrapol25.csv  EI-2023.csv  FAO-extrapol25.csv  FAO.csv  LUH2.csv  LUH2_GCB2025-extrapol25.csv  LUH2_GCB2025.csv  LUH3-extrapol25.csv  LUH3.csv  PRIMAP-2020-HISTCR-extrapol25.csv  PRIMAP-2020-HISTTP-extrapol25.csv  PRIMAP-2020-HISTTP.csv  PRIMAP_HISTCR-extrapol25.csv  PRIMAP_HISTCR.csv  PRIMAP_HISTTP-extrapol25.csv  PRIMAP_HISTTP.csv  WDI-2025-COVIDaveraged.csv  WDI-2025-extrapol25.csv  WDI-2025.csv
inst/extdata/release-2026-02-01/: sources.bib
inst/extdata/release-2026-06-01/: criteria-types.yaml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/code/R/: index.html
latest/code/python/: index.html
latest/components/: index.html
latest/edition-2026-02-01/descriptions/: index.html
latest/edition-2026-02-01/reference_data/: index.html
latest/edition-2026-02-01/sources/: index.html
latest/edition-2026-02-01/summary/: index.html
latest/edition-2026-02-01/thresholds/: index.html
latest/edition-2026-02-01/types/: index.html
latest/edition-2026-06-01/descriptions/: index.html
latest/edition-2026-06-01/reference_data/: index.html
latest/nav/: index.html
latest/search/: search_index.json
latest/tutorials/R/: R.py  (+1 more)
man/: editions.Rd  load_criteria.Rd  scenariovettingcriteria-package.Rd
operations/: index.html
python/scenario_vetting_criteria/: __init__.py  file_paths.py  formatting.py  loading.py  preprocessed.py
reference_data/: index.html
reference_srcs/: index.html
scripts/: gen_pages.py  mkdocs_macros.py
search/: search_index.json
tests/: conftest.py  test_bibliography.py  test_criteria.py  test_reference_data.py  test_structure.py  utils.py
tutorials/R/: R.ipynb  R.py  index.html
tutorials/basic/: index.html
tutorials/python/: index.html  python.py
(+78 files in other folders)
